<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Corre Negada</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_metas">MetasActivity</string>
    <string name="btMetas">Metas</string>
    <string name="lblMapa">Mapa</string>
    <string name="lblAtividade">Atividade</string>
    <string name="lblAtividades">Atividades</string>
    <string name="lblPersonalizar">Personalizar</string>
    <string name="btLocaisTreino">Locais de Treino</string>
    <string name="btDicas">Dicas</string>
    <string name="btResultados">Resultados</string>
    <string name="viewAlterarSenha">Alterar Senha</string>
    <string name="viewNotificacoes">Permitir Notificações</string>
    <string name="viewPublicarFace">Publicar no Facebook</string>
    <string name="viewAtualizacoes">Permitir atualização automática</string>
    <string name="btConf">Configurações</string>
    <string name="tituloMetas">Metas</string>
    <string name="lblDefinirDist">Definir Distância</string>
    <string name="lblPontoInicial">Ponto Inicial</string>
    <string name="lblPontoFinal">Ponto Final</string>
    <string name="lblCalcDistancia">Calcular Distância</string>
    <string name="btNova">Nova</string>
    <string name="btSugeridas">Sugeridas</string>
    <string name="ok">OO</string>
    <string name="inserir_atividade">Inserir tipo de atividade</string>
    <string name="calorias_perdidas">Calorias perdidas por m</string>
    <string name="kcal">0,0</string>
    <string name="adicionar_atividade">Adicionar as minhas atividades</string>
    <string name="cancelar">Cancelar</string>
    <string name="btInicio">Início</string>
    <string name="btIdaVolta">Ida e Volta</string>
    <string name="btExcluir">Excluir</string>
    <string name="title_activity_locais_treino">LocaisTreinoActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_detalhes_meta">DetalhesMetaActivity</string>
    <string name="title_activity_configuracoes">Configuracoes</string>
    <string name="title_activity_nova_meta">NovaMetaActivity</string>
    <string name="title_activity_corrida">CorridaActivity</string>
    <string name="title_activity_cronometro">CronometroActivity</string>
    <string name="title_activity_cadastrar_atividade">CadastrarAtividadeActivity</string>
    <string name="title_activity_listar_atividades">ListarAtividadesActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="atividade">Parado</string>
    <string name="tempoRegressivo">00:00</string>
    <string name="velocidade">00</string>
    <string name="title_activity_dicas">DicasActivity</string>
    <string name="title_dicas">Dicas</string>
    <string name="btCorrer">Correr</string>
    <string name="title_activity_frame_animation">FrameAnimationActivity</string>
    <string name="logo">logo</string>
    <string name="dica">Dica</string>
    <string name="categoria">Categoria</string>
    <string name="img">Img</string>
    <string name="cronometro">00:00</string>
    <string name="animacao_corrida">animacao</string>
    <string name="title_activity_informacoes">InformacoesActivity</string>
    <string name="title_activity_sobre">SobreActivity</string>

</resources>
