<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MetasActivity" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lVMetas"
            android:layout_width="match_parent"
            android:layout_height="286dp" >
        </ListView>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:text="@string/tituloMetas"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp" >

        <Button
            android:id="@+id/btNova"
            style="android:buttonStyle"
            android:layout_width="80dp"
            android:onClick="criarNovaMetaClick"
            android:layout_height="50dp"
            android:text="@string/btNova"
            
             />

        <Button
            android:id="@+id/button1"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/btExcluir" />

        <Button
            android:id="@+id/btInicio"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/btInicio" />
    </LinearLayout>

</RelativeLayout>