<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ListarAtividadesActivity" >

    <LinearLayout 
    	android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical" >
        
     		<TabWidget
	            android:id="@android:id/tabs"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
 
		        <FrameLayout
		            android:id="@android:id/tabcontent"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent" >
		            
		           		<ListView
					        android:id="@+id/atividades"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content" >
					    </ListView>
		            
		           		<RelativeLayout 
						    android:id="@+id/personalizar"
						    android:layout_width="match_parent"
						    android:layout_height="match_parent"
						    android:gravity="right"
						    android:paddingBottom="@dimen/activity_vertical_margin"
						    android:paddingLeft="@dimen/activity_horizontal_margin"
						    android:paddingRight="@dimen/activity_horizontal_margin"
						    android:paddingTop="@dimen/activity_vertical_margin"
						    tools:context=".CadastrarAtividadeActivity" >
						
						    <TextView
						        android:id="@+id/textView1"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:layout_alignLeft="@+id/view1"
						        android:layout_below="@+id/view1"
						        android:layout_marginTop="36dp"
						        android:text="@string/inserir_atividade" />
						
						    <EditText
						        android:id="@+id/txtAtividade"
						        android:layout_width="match_parent"
						        android:layout_height="35dp"
						        android:layout_alignLeft="@+id/textView1"
						        android:layout_below="@+id/textView1"
						        android:ems="10" >						
						    </EditText>
						
						    <TextView
						        android:id="@+id/textView2"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:layout_alignLeft="@+id/txtAtividade"
						        android:layout_below="@+id/txtAtividade"
						        android:layout_marginTop="18dp"
						        android:text="@string/calorias_perdidas" />
						
						    <EditText
						        android:id="@+id/txtCaloria"
						        android:layout_width="match_parent"
						        android:layout_height="35dp"
						        android:layout_alignLeft="@+id/txtAtividade"
						        android:layout_below="@+id/textView2"
						        android:ems="10" />
						
						    <View
						        android:id="@+id/view1"
						        android:layout_width="match_parent"
						        android:layout_height="wrap_content"
						        android:layout_alignBottom="@+id/btOk"
						        android:layout_alignRight="@+id/btOk" />
						
						    <Button
						        android:id="@+id/btOk"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:layout_alignParentRight="true"
						        android:layout_alignParentTop="true"
						        android:layout_marginRight="15dp"
						        android:onClick="cadastrarAtividade_Click"
						        android:text="@string/ok" />
						
						    <Button
						        android:id="@+id/btCancelar"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:layout_alignBaseline="@+id/btOk"
						        android:layout_alignBottom="@+id/btOk"
						        android:layout_toLeftOf="@+id/btOk"
						        android:onClick="cancelar_click"
						        android:text="@string/cancelar" />
						
						    <CheckBox
						        android:id="@+id/checkBox1"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:layout_below="@+id/txtCaloria"
						        android:layout_centerHorizontal="true"
						        android:layout_marginTop="88dp"
						        android:text="@string/adicionar_atividade" />
						
						</RelativeLayout>
		 		</FrameLayout>
 		            
    </LinearLayout>    

</TabHost>
